--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -8,10 +8,7 @@
 
 body {
   font-family: var(--font-sans);
-  background-color: #fafafa;
-  color: #09090b;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-display);
+  background-color: #F4F4F0;
+  color: #111;
+  -webkit-font-smoothing: antialiased;
 }
